<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="384dp"
        android:layout_height="111dp"
        android:id="@+id/tv_movie_title"
        android:textSize="30sp"
        android:paddingLeft="20dp"
        android:text="@string/movie_title_placeholder"
        android:gravity="center_vertical"
        android:background="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_movie_poster"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:layout_width="133dp"
        android:layout_height="175dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_rating"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:contentDescription="@string/picture_of_movie_poster"/>

    <TextView
        android:id="@+id/tv_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_date_placeholder"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toRightOf="@+id/iv_movie_poster" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_placeholder"
        android:textSize="15sp"
        android:layout_marginStart="184dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/ib_favorite_movie"
        android:layout_width="103dp"
        android:layout_height="48dp"
        android:text="@string/mark_as_favorite"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toRightOf="@+id/iv_movie_poster" />

    <TextView
        android:id="@+id/tv_synopsis"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:text="@string/synopsis_placeholder"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        android:padding="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.36" />

</android.support.constraint.ConstraintLayout>
    </layout>